--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.2.3",
     "bootstrap-css-only": "^4.4.1",
     "core-js": "^3.12.1",
     "highcharts": "^9.1.0",
     "highcharts-react-official": "^3.0.0",
+    "jquery": "^3.6.2",
     "mdbreact": "^4.27.0",
     "react": "^16.12.0",
     "react-data-table-component": "^6.11.7",
