--- a/backend_api/package.json
+++ b/backend_api/package.json
@@ -34,7 +34,8 @@
     "prestart": "yarn run rebuild",
     "start": "node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
-    "rebuild": "yarn run clean && yarn run build"
+    "rebuild": "yarn run clean && yarn run build",
+    "start:watch": "tsc-watch --target es2017 --outDir ./dist --onSuccess \"node .\""
   },
   "repository": {
     "type": "git",
@@ -55,15 +56,16 @@
     "@loopback/rest": "^12.0.6",
     "@loopback/rest-explorer": "^5.0.6",
     "@loopback/service-proxy": "^5.0.6",
+    "tsc-watch": "^6.0.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@loopback/build": "^9.0.6",
-    "source-map-support": "^0.5.21",
+    "@loopback/eslint-config": "^13.0.6",
     "@loopback/testlab": "^5.0.6",
     "@types/node": "^14.18.34",
-    "@loopback/eslint-config": "^13.0.6",
     "eslint": "^8.28.0",
+    "source-map-support": "^0.5.21",
     "typescript": "~4.9.4"
   }
 }
