--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "highcharts-react-official": "^3.0.0",
     "jquery": "^3.6.2",
     "mdbreact": "^4.27.0",
+    "nodemon": "^2.0.20",
     "react": "^16.12.0",
     "react-data-table-component": "^6.11.7",
     "react-data-table-component-extensions": "^1.5.2",
