--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -4,6 +4,10 @@ project(core)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../../compute/strategies/cpp_acc)
 
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
 if(APPLE)
     LINK_DIRECTORIES("/opt/homebrew/opt/libomp/lib")
     include_directories("/opt/homebrew/opt/libomp/include")
